# exampleOpenGL2

./: CMakeLists.txt  README.md
res/: fragment.shader  vertex.shader
src/: Camera.h  main.cpp
